--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     </div>
   </section>
 
-</body>
-</html> <!--task2den listeyi çekmek için-->
+
+ <!--task2den listeyi çekmek için-->
 <a href="task2.html">Paket Fiyatlarını Gör</a>
 <ul class="pricing">
   <li>
@@ -74,3 +74,5 @@
     <span>199₺</span>
   </li>
 </ul>
+</body>
+</html>
