--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <!-- HERO kısmı-->
   <section class="hero">
     <div class="hero-image">
-      <img src="assets/kitaplogo.jpg" alt="Kitaplardan oluşan dünya">
+      <img src="kitaplogo.jpg" alt="Kitaplardan oluşan dünya">
     </div>
 
     <div class="hero-text">
