--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <a href="#">Askıda Kitap</a>
       <a href="#">Kütüphane</a>
       <a href="#">Topluluk</a>
+      <a href="team.html">Ekibimiz</a>
     </nav>
   </header>
 
