--- a/team.html
+++ b/team.html
@@ -16,7 +16,7 @@
   <section class="takim-tanimi">
     <h1><i>Okumaya Adanmış Gönüllerden Oluşan Takımımız</i></h1>
     <p>
-      Q-Line Astra Kütüphaneleri, bilginin sınırlarını zorlayan öğrencilerin destek alabileceği ve destek verebileceği bir yaşam alanıdır. Bilimin verdiği güç ve ilimin filizlendirdiği yön ile Astra Kütüphanelerinde yeni çiçekler açtırabilir ve açmış çiçeklerin bilgisini edinebilirsiniz. Burası iyi niyetlerin bilgiyle donatılabileceği ve donatılmış bilgilerin iyi niyetle uygulanabileceği bir ekosistemdir. Dünyamıza Hoşgeldiniz!
+      Q-Line Astra Kütüphaneleri olarak bilgi edinme yollarımıza ortak oluyoruz.
     </p>
 
   </section>
